--- a/styles/main.css
+++ b/styles/main.css
@@ -504,3 +504,11 @@ body {
    html { font-size: 120%; }
    /* Style information will go here */
  }
+
+ .clearfix::after {
+    content: ".";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+ }
