--- a/styles/main.css
+++ b/styles/main.css
@@ -507,6 +507,9 @@ body {
  .links-container .navbar-link:hover {
      color: rgb(233,50,117);
  }
+
+.links-container .navbar-link:active {
+     background-color: white;
 }
 
 .container {
